Fix animation names alignment

--- a/public/index.css
+++ b/public/index.css
@@ -27,7 +27,6 @@ html, body {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 #controls_side_panel h2 {
